--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,30 +4,21 @@ run:
   timeout: 10m
 
 linters:
+  default: standard
   enable:
-    #    - errcheck
-    - govet
-    - ineffassign
-    - staticcheck
-    - gocritic
     - bodyclose
+    - gocritic
     - gosec
     - prealloc
     - unconvert
-    - unused
+    - misspell
+    - goconst
 
 linters-settings:
   govet:
-    check-shadowing: false
-    settings:
-      printf:
-        funcs:
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
     disable:
       - fieldalignment
+      - shadow
 
   gocritic:
     enabled-checks:
@@ -42,18 +33,27 @@ linters-settings:
 
   gosec:
     excludes:
-      - G115  # Integer overflow - intentional for PostgreSQL wire protocol compatibility
+      - G115  # Integer overflow - intentional for PostgreSQL wire protocol
+      - G104  # Unhandled errors - using errcheck instead
 
   goconst:
-    min-len: 2
-    min-occurrences: 2
+    min-len: 3
+    min-occurrences: 3
 
 issues:
   exclude-dirs:
     - vendor
     - third_party
     - hack
+
   exclude-rules:
+    - path: _test\.go
+      linters:
+        - errcheck
+        - gosec
+
     - linters:
         - staticcheck
       text: "SA1019|SA1029|SA5011"
+
+  generated: lax
